# languagelearn

./: .gitignore  .graphqlconfig.yml  Makefile  README.md  README.mine  amplify.yml  appspec.yml  docker-compose.yml  index.html  package-lock.json  package.json  style.css  style.css.map  webpack.config.js
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/schema/: schema.graphql
api/: .env  .mocharc.json  README.md  nodemon.json  package-lock.json  package.json  pyproject.toml  schema.gql  tsconfig.json
api/infra/: connect.sh  docker-compose.yml
api/src/: app.ts
api/src/app/: flask.py
api/src/app/auth/: views.py
api/src/entities/: Connector.ts  User.test.ts  User.ts
api/src/service/: db.py  model.py  service.py
api/test/: example.ts  setup.ts  test_db.py
app/: .dockerignore  Dockerfile  docker-entrypoint.sh  requirements.txt
backend/: Taskfile.yml  env.json  samconfig.toml
browser/: package-lock.json  package.json
django_app/: requirements.txt
doc/: BusinessPlan.odt  DomainNames.md  LaunchExpenses.ods  MemberSites.md  history.md  todo.md
docker/: Makefile  docker-compose.yml
flask_docker/: Dockerfile  app.py
frontend/: package-lock.json  package.json
legacy/: .gitconfig  Makefile  README.md  appspec.yml
public/: index.html
src/: About.svelte  App.css  App.js  AppStore.js  AuthTabset.svelte  Body.svelte  Header.svelte  Home.svelte  HomeGuest.svelte  LoginForm.svelte  RegistrationForm.svelte  app.js  index.js  style.css.map
terraform/: main.tf  userdata.sh
tools/: start_server.sh  stop_server.sh
(+130 files in other folders)
